// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles Flex bottom 1`] = `
<div
  className="hnjLZE"
/>
`;

exports[`Styles Flex column 1`] = `
<div
  className="fUuAvE"
/>
`;

exports[`Styles Flex flex 1 1`] = `
<div
  className="epDlL"
/>
`;

exports[`Styles Flex inline 1`] = `
<div
  className="iUtUwa"
/>
`;

exports[`Styles Flex middle 1`] = `
<div
  className="jWbOhE"
/>
`;

exports[`Styles Flex row 1`] = `
<div
  className="gqzGmp"
/>
`;

exports[`Styles Flex top 1`] = `
<div
  className="gSdANB"
/>
`;
